glibc (2.3.2-1) unstable; urgency=low

  * Jeff Bailey <jbailey@nisa.net>
    - debian/patches/hurd-enable-ldconfig.dpatch: New file
    - debian/packages.d/libc.mk: Install regular ldconfig, not
      debian/ldconfig-hurd.sh on hurd-i386
    - debian/patches/0list: Add hurd-enable-ldconfig
    - debian/sysdeps/paths.mk: Comply with FHS, use $(prefix)/lib, not
      $(prefix)/libexec

  * GOTO Masanori <gotom@debian.or.jp>
    - Updated glibc 2.3.2.
    - debian/patches/cvs.dpatch: rename it to 10_cvs.dpatch.
      I plan to introduce <2digitnumber>_<filename>.dpatch filename.
    - debian/patches/10_cvs.dpatch: update 2003-04-28 upstream cvs.
    - version: bump up to 2.3.2.
    - rules.d/shlibs.mk: bump up to 2.3.2.
    - debian/sysdeps/sysdeps.mk: i386 optimization level is back to -O2.

    - These debian/patches/<below files> are removed from cvs because
      they are no longer being used and were superceeded by CVS patches:
      * document-fix.dpatch
      * glibc23-cert-rpcxdr.dpatch
      * glibc23-getdents64-fix.dpatch
      * glibc23-getaddrinfo.dpatch
      * glibc23-hppa-shmlba.dpatch
      * glibc23-m68k-madv.dpatch
      * glibc23-malloc-check.dpatch
      * glibc23-regcomp.dpatch
      * signal-texi.dpatch
      * glibc23-ia64-strncpy.dpatch
      * elf-machine-rela-mips.dpatch
      * glibc23-linuxthreads-fix.dpatch
      * locales-monetary.dpatch

    - These debian/patches/<below files> are removed from cvs because
      they are no longer being used and already fixed the previous versions:
      * rtsig.dpatch
      * crypt.dpatch
      * s390x-lib64.dpatch
      * hurd-fork-fix.dpatch

    - These debian/patches/<below files> are fixed to apply for glibc
      2.3.2 + cvs.dpatch.
      * alpha-pic.dpatch: Fix the diff conflict.
      * glibc23-hppa-Rminkernel.dpatch: likewise.
      * libgcc-compat-all.dpatch: remove reflected entries in glibc-2.3.2.
      * libgcc-compat-other.dpatch: likewise.

    - These bugs are fixed in this update: