@@ -1,7 +1,7 @@
 Source: glibc
 Section: libs
 Priority: required
-Build-Depends: gettext (>= 0.10.37-1), make (>= 3.78-4), dpkg-dev (>= 1.4.1.5), debianutils (>= 1.13.1), tar (>= 1.13.11), bzip2, texinfo (>= 4.0), kernel-headers-2.4 [!hurd-i386], mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20020608-1) [hurd-i386], gnumach-dev [hurd-i386], texi2html, file, gcc-3.2, autoconf, binutils (>= 2.13.90.0.10-1) [!s390], binutils (>= 2.13.90.0.4-1) [s390]
+Build-Depends: gettext (>= 0.10.37-1), make (>= 3.78-4), dpkg-dev (>= 1.4.1.5), debianutils (>= 1.13.1), tar (>= 1.13.11), bzip2, texinfo (>= 4.0), kernel-headers-2.4 [!hurd-i386], mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20020608-1) [hurd-i386], gnumach-dev [hurd-i386], texi2html, file, gcc-3.2, autoconf, binutils (>= 2.13.90.0.10-1) [!s390], binutils (>= 2.13.90.0.4-1) [s390], gcc-3.3 [sparc]
 Build-Depends-Indep: perl, latex2html
 Build-Conflicts: kernel-headers-2.4.19-sparc [!sparc], kernel-headers-2.4.18-sparc [!sparc]
 Maintainer: GNU Libc Maintainers <debian-glibc@lists.debian.org>
