@@ -8,7 +8,7 @@ stamp_configure_64	= $(stamp_configure)_64
 
 flags_64 = -g0 -O2 -Wall -finline-limit=3000
 
-MYCC = gcc-3.2 -m64
+MYCC = gcc-3.3 -m64
 
 ifeq ($(log_build),/dev/tty)
   log_build_64 = /dev/tty
