@@ -174,7 +174,7 @@ include $(package_rules)/locales.mk
 include $(package_rules)/glibc-doc.mk
 include $(package_rules)/optimized.mk
 ifeq ($(DEB_HOST_GNU_CPU),sparc)
-#include $(package_rules)/sparc64.mk
+include $(package_rules)/sparc64.mk
 endif
 ifeq ($(DEB_HOST_GNU_CPU),s390)
 include $(package_rules)/s390x.mk
