@@ -1,5 +1,11 @@
 glibc (2.3.2-1) unstable; urgency=low
 
+  * Clint Adams <schizo@debian.org>
+    - debian/control: build-dep on gcc-3.3 for sparc(64)
+    - debian/rules: re-enable sparc64 build
+    - debian/packages.d/sparc64.mk: use gcc-3.3 to build sparc64
+    - debian/sysdeps/linux.mk: re-enable sparc64 build
+
   * Jeff Bailey <jbailey@nisa.net>
     - debian/patches/hurd-enable-ldconfig.dpatch: New file
     - debian/packages.d/libc.mk: Install regular ldconfig, not
